cluster/homelab/apps/CTF/FileUpload3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload3
  namespace: ctf
spec:
  selector:
    app: upload3
  ports:
    - port: 80
      targetPort: 80
