cluster/homelab/apps/CTF/FileUpload3/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: upload3
  namespace: ctf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`upload3.oplabs.us`)
      kind: Rule
      middlewares:
        []
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: upload3
          port: 80
  tls:
    secretName: oplabs-us-tls # give it the ole tls cert
